modify webconfig